# ChangeLog for app-benchmarks/jmeter
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-benchmarks/jmeter/ChangeLog,v 1.14 2004/10/16 18:13:51 axxo Exp $

  16 Oct 2004; Thomas Matthijs <axxo@gentoo.org> jmeter-1.9.1.ebuild,
  jmeter-2.0.1-r1.ebuild, jmeter-2.0.1.ebuild:
  use java-pkg_dohtml instead of dohtml to also install the package-list in
  case of api docs: #50740

  12 Oct 2004; Thomas Matthijs <axxo@gentoo.org> jmeter-1.9.1.ebuild,
  jmeter-2.0.1.ebuild:
  Fixed jikes deps. disabled jikes in 2.0.1 as it doesn't compile, patches are
  welcome on bugs.gentoo.org

*jmeter-2.0.1-r1 (12 Sep 2004)

  12 Sep 2004; Thomas Matthijs <axxo@gentoo.org> +jmeter-2.0.1-r1.ebuild:
  changes to stop using packed jars, work in progress, see bug 63309 for more
  information

  23 Aug 2004; Chris Aniszczyk <zx@gentoo.org>
  -files/jmeter-1.8.1-gentoo.diff, -jmeter-1.8.1.ebuild:
  Clean up

*jmeter-2.0.1 (23 Aug 2004)

  23 Aug 2004; Chris Aniszczyk <zx@gentoo.org> +jmeter-2.0.1.ebuild:
  Version bump. Closes #60052

  05 Apr 2004; Chris Aniszczyk <zx@gentoo.org> jmeter-1.8.1.ebuild:
  inherit eutils due to epatch

  15 Mar 2004; Seemant Kulleen <seemant@gentoo.org> jmeter-1.8.1.ebuild:
  fix bug #47712 by Michael Sterret <mr_bones_@gentoo.org>

*jmeter-1.9.1 (28 Feb 2004)

  28 Feb 2004; Chris Aniszczyk <zx@gentoo.org> jmeter-1.9.1.ebuild:
  Version bump + we can build from source ;)

  15 Dec 2003; Adrian Almenar <strider@gentoo.org> jmeter-1.8.1.ebuild:
  Fixes bug #35733. Cannot find patch. Masked packages on arches where sun-jdk doesnt work.
  Added metadata.xml.

  05 Dec 2003; Jason Wever <weeve@gentoo.org> jmeter-1.8.1.ebuild:
  Masked on sparc because there is no sun jdk for linux/sparc.

*jmeter-1.8.1 (16 Mar 2003)

  06 Apr 2003; Dylan Carlson <absinthe@gentoo.org> jmeter-1.8.1.ebuild:
  ppc sparc moved to stable.

  03 Apr 2003; Dylan Carlson <absinthe@gentoo.org> jmeter-1.8.1.ebuild: