@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-benchmarks/jmeter/Attic/jmeter-2.0.1.ebuild,v 1.3 2004/10/16 18:13:51 axxo Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-benchmarks/jmeter/Attic/jmeter-2.0.1.ebuild,v 1.4 2004/12/14 16:26:48 axxo Exp $
 
 inherit java-pkg
 
@@ -8,6 +8,7 @@ DESCRIPTION="Load test and measure performance on HTTP/FTP services and database
 HOMEPAGE="http://jakarta.apache.org/jmeter"
 SRC_URI="mirror://apache/jakarta/jmeter/source/jakarta-${P}_src.tgz"
 DEPEND=">=virtual/jdk-1.3
+	dev-java/ant
 	doc? ( >=dev-java/velocity-1.4 )"
 	# jikes ( dev-java/jikes"
 RDEPEND=">=virtual/jdk-1.3"
